--- a/DBSynchronization.vcxproj.filters
+++ b/DBSynchronization.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="UtilCore\Util">
       <UniqueIdentifier>{4db215ce-dd93-43b5-8138-8087dc249594}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UtilCore\Excel">
+      <UniqueIdentifier>{b54546b2-ee14-4f90-beaf-179d5f9ebf10}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Library\UtilCore\BaseGlobal.cpp">
@@ -86,6 +89,13 @@
     <ClCompile Include="..\Library\UtilCore\Util\FileUtil.cpp">
       <Filter>UtilCore\Util</Filter>
     </ClCompile>
+    <ClCompile Include="..\Library\UtilCore\Util\IconvUtil.cpp">
+      <Filter>UtilCore\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Library\UtilCore\Excel\XlntUtil.cpp">
+      <Filter>UtilCore\Excel</Filter>
+    </ClCompile>
+    <ClCompile Include="TestFunction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Library\UtilCore\BaseDefine.h">
@@ -197,6 +207,13 @@
     <ClInclude Include="..\Library\UtilCore\Util\FileUtil.h">
       <Filter>UtilCore\Util</Filter>
     </ClInclude>
+    <ClInclude Include="..\Library\UtilCore\Util\IconvUtil.h">
+      <Filter>UtilCore\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Library\UtilCore\Excel\XlntUtil.h">
+      <Filter>UtilCore\Excel</Filter>
+    </ClInclude>
+    <ClInclude Include="TestFunction.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Library\UtilCore\DB\BaseODBC.inl">
