--- a/DBSynchronization.vcxproj
+++ b/DBSynchronization.vcxproj
@@ -69,7 +69,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@
     <ClCompile Include="..\Library\UtilCore\Util\Log.cpp" />
     <ClCompile Include="..\Library\UtilCore\Util\ShellUtil.cpp" />
     <ClCompile Include="..\Library\UtilCore\Util\StringUtil.cpp" />
-    <ClCompile Include="..\Library\UtilCore\XML\XMLParser.cpp" />
+    <ClCompile Include="..\Library\UtilCore\XML\RapidXMLUtil.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -170,7 +170,7 @@
     <ClInclude Include="..\Library\UtilCore\Util\Log.h" />
     <ClInclude Include="..\Library\UtilCore\Util\ShellUtil.h" />
     <ClInclude Include="..\Library\UtilCore\Util\StringUtil.h" />
-    <ClInclude Include="..\Library\UtilCore\XML\XMLParser.h" />
+    <ClInclude Include="..\Library\UtilCore\XML\RapidXMLUtil.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="TestFunction.h" />
   </ItemGroup>
@@ -179,6 +179,7 @@
     <None Include="..\Library\UtilCore\DB\DB_ColAttr.inl" />
     <None Include="..\Library\UtilCore\DB\DB_Error.inl" />
     <None Include="..\Library\UtilCore\DB\DB_ParamAttr.inl" />
+    <None Include="..\Library\UtilCore\Excel\XlntUtil.inl" />
     <None Include="..\Library\UtilCore\JSON\JSONParser.inl" />
     <None Include="..\Library\UtilCore\Memory\Singleton.inl" />
   </ItemGroup>
